# MontageAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  web.app.py
agent/: supervisor.py
agent/tools/: captioner.py  categorize.py  clip_features.py  cluster_photos.py  dedupe_quality.py  ingest.py  publisher.py  select_diverse.py
checkpoints/lora_blip2_montage/best/: README.md
checkpoints/lora_blip2_montage/last/: adapter_config.json
configs/: agent.yaml  lora_blip2.yaml
data/style/: hashtag_bank.csv  past_captions.jsonl  past_captions_bak.jsonl  train_captioning.jsonl  train_captioning_old.jsonl  val_captioning.jsonl  val_captioning_bak.jsonl
deliverables/: MontageAgent-AIAgentArchitecture.docx  MontageAgent-Data Science Report.docx  ~$ntageAgent-Data Science Report.docx
deliverables/Untitled.rtfd/: TXT.rtf
deliverables/docs/: Executive Summary.docx  MontageAgent-AIAgentArchitecture.docx  MontageAgent-Data Science Report.docx  ~$ntageAgent-Screenshots.docx
docs/: agent_patterns_mapping.md  architecture.md  data_science_report.md
eval/: ablations.py  human_eval_protocol.md  metrics.py
models/: train_lora_blip2.py
publisher/: ig_publish.py
training/: train_lora_blip2.py
ui/: streamlit_app.py
