[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montage-photo-agent"
version = "0.1.0"
description = "Automates event photo sorting, selection, captioning, and optional Instagram publishing for Montage (IIT Guwahati)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Prem Kondru"}]

[tool.setuptools]
packages = ["agent"]
