[metadata]
name = montage-photo-agent
version = 0.1.0
description = Automates event photo sorting, selection, captioning, and optional Instagram publishing for Montage (IIT Guwahati).
long_description = file: README.md
long_description_content_type = text/markdown
author = Prem Kondru

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    pandas
    scikit-learn
    Pillow
    tqdm
    faiss-cpu
    streamlit

[options.packages.find]
exclude =
    tests
    models.checkpoints
